change for conflict, edit H2 and add h3 tag

--- a/helloWind.html
+++ b/helloWind.html
@@ -7,7 +7,10 @@
     <h1>
       Welcome My Page!
     </h1>
-    <h2>Hello 2!</H2>
+    <h2>Hello 2 This is Corrected by server!</H2>
+    <h3>
+     This is Corrected by server
+    </h3>
     Hello Word!
   </body>
 </html>
